@@ -1,5 +1,7 @@
 2010-04-26  Tim Waugh  <twaugh@redhat.com>
 
+	* Makefile, setup.py: Define VERSION in setup.py (trac #14).
+
 	* cupsipp.c: Added compatibility code to allow compilation
 	with Python < 2.5 (trac #14).
 
